<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="sleepQualityViewModel"
            type="com.example.android.sleepquality.sleepquality.SleepQualityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleepquality.SleepQualityFragment">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/triple_margin"
            android:fontFamily="@font/peralta"
            android:text="@string/how_was_hour_sleep"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toTopOf="@+id/quality_zero_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/quality_zero_image"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/icon_size"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(0)}"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:contentDescription="@string/quality_0"
            app:layout_constraintEnd_toStartOf="@+id/quality_one_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            app:srcCompat="@drawable/ic_sleep_0" />

        <ImageView
            android:id="@+id/quality_one_image"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(1)}"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_1"
            app:layout_constraintBottom_toBottomOf="@+id/quality_zero_image"
            app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
            app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
            app:srcCompat="@drawable/ic_sleep_1" />

        <ImageView
            android:id="@+id/quality_two_image"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(2)}"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/quality_2"
            app:layout_constraintBottom_toBottomOf="@+id/quality_one_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quality_one_image"
            app:srcCompat="@drawable/ic_sleep_2" />

        <ImageView
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(3)}"
            android:id="@+id/quality_three_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/quality_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quality_four_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quality_zero_image"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_sleep_3" />

        <ImageView
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(4)}"
            android:id="@+id/quality_four_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_4"
            app:layout_constraintBottom_toBottomOf="@+id/quality_three_image"
            app:layout_constraintEnd_toStartOf="@+id/quality_five_image"
            app:layout_constraintStart_toEndOf="@+id/quality_three_image"
            app:layout_constraintTop_toTopOf="@+id/quality_three_image"
            app:srcCompat="@drawable/ic_sleep_4" />

        <ImageView
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="@{() -> sleepQualityViewModel.onSetSleepQuality(5)}"
            android:id="@+id/quality_five_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/quality_5"
            app:layout_constraintBottom_toBottomOf="@+id/quality_four_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quality_four_image"
            app:layout_constraintTop_toTopOf="@+id/quality_four_image"
            app:srcCompat="@drawable/ic_sleep_5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
